# chatbot_whith_ai_alura

./: .gitignore  README.md  app.py  assistente_ecomart.py  assistentes.json  pyproject.toml  tools_ecomart.py
